lock spec to 9.0.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - gem install cfhighlander cfn-nag rspec
   - pip install --user cfn-lint
 before_script:
-  - cfndsl -u
+  - cfndsl -u 9.0.0
 script:
   - rspec
   - cfn_nag_scan -i out/tests
